--- a/OnThiGiuaKi/De12/de12.ipynb
+++ b/OnThiGiuaKi/De12/de12.ipynb
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -635,6 +635,7 @@
    "source": [
     "# Diện tích theo mỗi loại poster \n",
     "# đọc vào thi mỗi loại là groupby theo poster xong tới chọn cột diện tích \n",
+    "# vì đếm số lượng nên sử dụng hàm count\n",
     "dt_ml = du_lieu_moi_2.groupby('poster_temp')['acreage'].count()\n",
     "plt.bar(dt_ml.index, dt_ml.values)\n",
     "plt.show()"
