--- a/OnThiGiuaKi/De12/de12.ipynb
+++ b/OnThiGiuaKi/De12/de12.ipynb
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -711,6 +711,30 @@
     "theo_thang = chon_2020.groupby(chon_2020['time'].dt.month).size()\n",
     "plt.plot(theo_thang)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.43819986201772543\n"
+     ]
+    }
+   ],
+   "source": [
+    "# b \n",
+    "# chọn năm 2020 \n",
+    "chon_2020 = df[df['time'].dt.year == 2020]\n",
+    "# chọn tháng 6 đến tháng 8 \n",
+    "thang_6_8 = chon_2020[(chon_2020['time'].dt.month >= 6) & (chon_2020['time'].dt.month <= 8)]['time'].count()\n",
+    "\n",
+    "p = thang_6_8 / len(chon_2020)\n",
+    "print(p)"
    ]
   },
   {
